# ai_coordination_engine

./: .gitignore  README.md  pyproject.toml  setup.py
ai_coordination_engine/: __init__.py  constants.py  exceptions.py  handlers.py  main.py  models.py  mutations.py  queries.py  schema.py  types.py
ai_coordination_engine/handlers/: __init__.py  ai_coordination_utility.py  config.py  config_manager.py  operation_hub.py  operation_hub_listener.py
ai_coordination_engine/models/: __init__.py  agent.py  base.py  cache.py  coordination.py  decorators.py  session.py  session_agent.py  session_agent_state.py  session_run.py  session_thread.py  task.py  task_schedule.py  task_session.py  thread.py  utils.py
ai_coordination_engine/mutations/: __init__.py  agent.py  coordination.py  procedure_hub.py  session.py  session_agent.py  session_agent_state.py  session_run.py  session_thread.py  task.py  task_schedule.py  task_session.py  thread.py
ai_coordination_engine/queries/: __init__.py  agent.py  coordination.py  operation_hub.py  session.py  session_agent.py  session_agent_state.py  session_run.py  session_thread.py  task.py  task_schedule.py  task_session.py
ai_coordination_engine/schema/: __init__.py  mutation.py  query.py  types.py
ai_coordination_engine/scripts/: __init__.py  migrate_coordination_agents.py
ai_coordination_engine/tests/: ai_coordination_engine.graphql  test_ai_coordination_engine.py
ai_coordination_engine/types/: __init__.py  agent.py  coordination.py  operation_hub.py  procedure_hub.py  session.py  task.py  (+7 more)
docs/: DEVELOPMENT_PLAN.md  MIGRATION_PLAN_ENDPOINT_TO_PART.md  PERFORMANCE_OPTIMIZATION_PLAN.md
(+26 files in other folders)
